# design-for-coverage

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
case1/: CMakeLists.txt  README.md
case1/inc/: Case1.hpp  Solution1.hpp
case1/src/: Case1.cpp  Solution1.cpp
case1/test/: CMakeLists.txt  test.cpp
doc/: CMakeLists.txt  Doxyfile.in  StartPage.md
externLib/: CMakeLists.txt
externLib/inc/: externLib.hpp
externLib/src/: externLib.cpp
libEx/: CMakeLists.txt
libEx/inc/: Example.hpp
libEx/src/: Example.cpp
libEx/test/: CMakeLists.txt  test.cpp
objLibEx/: CMakeLists.txt
objLibEx/inc/: Version.h.in
objLibEx/src/: Main.cpp
